--- a/2_strategy/详解.md
+++ b/2_strategy/详解.md
@@ -1,4 +1,4 @@
-# Strategy策略模式
+# 2.Strategy策略模式
 ## 动机：
 在软件开发过程中，我们经常会遇到需要使用多种算法的场景。如果将这些算法直接编码在一个对象中，会使得对象异常复杂并且难以处理。
 
@@ -75,5 +75,108 @@ private:
 
 策略模式适用于那些需要动态选择算法的场景。当算法多样化，并且希望在运行时能够灵活地更换算法时，应考虑使用策略模式。此外，它也帮助将算法的实现与使用算法的代码解耦，提高了代码的可维护性。
 
+简单来讲，如果`if_else`经常变动的代码，那么就可能需要使用策略类！
+
+
+我们可以看一下下面这个例子：
+```cpp
+class Sorter{
+public:
+    virtual void sort(vector<int>& data, const string& type) {
+
+        // 在这个地方用到了分支语句，这个地方就是策略模式的应用场景
+        if(type == "ascending") {
+            std::sort(data.begin(), data.end());
+        } else if(type == "descending") {
+            std::sort(data.rbegin(), data.rend());
+        } else {
+            cout << "Invalid type" << endl;
+        }
+    }
+    void print(const vector<int>& data) {
+        for(auto& d : data) {
+            cout << d << " ";
+        }
+        cout << endl;
+    }
+};
+```
+Sorter类提供了一个接口，可以根据传入的字符串类型来决定是使用升序还是降序来排序数据集。这正体现了策略模式的核心思想：为一个问题提供多种解决方案，并能够在运行时进行切换。
+
+我们在这里使用到了`if`使用，那么我们有没有一种好的方法来将这个选择的动作延后呢？
+
+
+```cpp
+/* 一种抽象的排序策略 */ 
+class SorterStrategy{
+public:
+    virtual void sort(vector<int>& data) = 0;
+    virtual ~SorterStrategy() = default;
+};
+
+/* 具体的升序策略 */ 
+class ascSort : public SorterStrategy {
+public:
+    // 对排序进行重载
+    void sort(vector<int>& data) override {
+        std::sort(data.begin(), data.end());
+    }
+};
+
+/* 具体的降序策略 */ 
+class descSort : public SorterStrategy {
+    // 对排序进行重载
+    void sort(vector<int>& data) override {
+        std::sort(data.rbegin(), data.rend());
+    }
+};
+
+
+/* 策略模式，并且使用了智能指针，进行了封装 */ 
+class Sorter{
+public:
+    void setStartegy(shared_ptr<SorterStrategy> strategy) {
+        m_strategy = strategy;
+    }
+    void sort(vector<int>& data) {
+        m_strategy->sort(data);
+    }
+    void print(const vector<int>& data) {
+        for(auto& d : data) {
+            cout << d << " ";
+        }
+        cout << endl;
+    }
+private:
+    shared_ptr<SorterStrategy> m_strategy;
+};
+
+```
+
+这段代码更加增强了模块化和灵活的设计，首先定义一个抽象策略类，并且实际定义具体的升降排序类，并且使用策略管理Sorter来提供接口，通过智能指针进行管理，最后是它的使用场景：
+
+
+```cpp
+int main() {
+    vector<int> data = {8, 2, 4, 5, 1};
+    // 创建一个排序管理类
+    Sorter sorter;
+    // 设置排序为升序
+    sorter.setStartegy(make_shared<ascSort>());
+    // 进行升序排序
+    sorter.sort(data);
+    // 进行排序打印
+    sorter.print(data);
+
+    // 可以在代码中重新设置排序管理，并且除了升序和降序之外，可以增加更多排序方式
+    sorter.setStartegy(make_shared<descSort>());
+    sorter.sort(data);
+    sorter.print(data);
+
+    return 0;
+}
+```
+
+这种设计非常模块化，使得不同的排序策略可以独立实现并且与Sorter类组合，允许在以后轻松添加新的策略而无需修改现有代码，只需要创建一个新的策略即可。
 
 
