补充了观察者模式的完整代码

--- a/3_observer/详解.md
+++ b/3_observer/详解.md
@@ -2,10 +2,10 @@
 ## 动机
 在软件构建的过程中，我们需要为某些对象建立一种通知依赖关系，一个对象的状态发生改变，所有依赖对象都能够得到通知。但是如果依赖过于紧密，则软件不能很好地抵御变化。
 
-面向对象可以将这种依赖关系弱化，并且使其更加稳定，从而实现软件体系结构的松耦合。
 
+面向对象可以将这种依赖关系弱化，并且使其更加稳定，从而实现软件体系结构的松耦合。
 例如在一个任务处理中，我们希望加一个进度条来查看处理进度，可以查看如下案例：
-```c++
+```cpp
 class A{
 public:
     void split() {
@@ -28,13 +28,14 @@ private:
 
 我们发现上述代码是在for循环中去添加进度显示，大致看的时候是没什么问题的，但是这个实现是有哪些问题呢？
 
-**违背了依赖倒置原则**，我们发现A会产生编译时依赖ProcessBar，而这个进度条是一个实现细节，我们无法保证ProcessBar一直都是一个进度条的实现，它可能是百分比/图形化/非图形化等等各种显示，它会导致我们产生实现细节的困扰。
+**违背了依赖倒置原则**，我们发现`A`会产生编译时依赖`ProcessBar`，而这个进度条是一个实现细节，我们无法保证`ProcessBar`一直都是一个进度条的实现，它可能是百分比/图形化/非图形化等等各种显示，它会导致我们产生实现细节的困扰。
 
-解决方案就是我们不依赖它本身，而是依赖它的抽象基类，但是如果没有基类怎么办？——自行抽象
+## 解决方案
+为了解决这个问题，我们可以使用一个抽象接口，将依赖关系松耦合，从而避免对实现细节的困扰，但是如果没有基类怎么办？——自行抽象!
 
 我们发现进度条实际上是一条通知，通知当前进度
 
-```c++
+```cpp
 // 一个抽象的通知机制，只是一个接口，不含具体实现
 class IProgress{
 public:
@@ -64,7 +65,7 @@ private:
 ```
 
 这样我们就通过一个抽象接口来解决通知问题，实际上还可以再优化一些
-```c++
+```cpp
 // 一个抽象的通知机制，只是一个接口，不含具体实现
 class IProgress{
 public:
@@ -83,7 +84,7 @@ public:
             
             // 开始处理
 
-            // 通知机制
+            // 新增一个通知机制，把通知封装出去
             onProgress();
         }
     }
@@ -103,7 +104,7 @@ private:
 
 我们接着修改:
 
-```c++
+```cpp
 // 一个抽象的通知机制，只是一个接口，不含具体实现
 class IProgress{
 public:
@@ -149,4 +150,222 @@ private:
 
 定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖它的对象都得到通知并且自动更新。
 
-观察者模式是基于事件的UI框架中非常常用的一个模式，也是MVC模式的重要组成部分
+
+## 应用场景
+观察者模式在基于事件的UI框架中非常常用，也经常用于MVC模式等场景：
+
+### 基于事件的UI框架
+> 基于事件的UI框架是一种设计图形用户界面（GUI）的架构，其中用户操作（例如点击按钮、输入文本、移动鼠标等）被视为事件。这种框架通过事件驱动的方式处理用户输入，使得应用程序的行为响应于这些事件。
+
+- **事件驱动**：当用户与界面交互时，系统生成一个事件（如鼠标点击事件、键盘输入事件等）。框架通过事件分发机制，将这些事件传递给相关的处理函数或回调函数。
+
+- **事件循环**：这种框架通常包含一个主事件循环，用于持续监听并分发事件。例如，Qt和Java的Swing都是典型的基于事件的UI框架。
+
+- **松耦合**：由于事件驱动，UI组件与业务逻辑之间可以保持相对松散的耦合，从而更容易扩展和维护。
+
+### MVC模式
+MVC模式（Model-View-Controller）是一种将应用程序的内部结构分为三部分的方法：
+
+1. **Model（模型）**：负责应用程序的业务逻辑和数据管理。它可以与数据库交互，处理数据并将其提供给视图或控制器。
+
+2. **View（视图）**：负责展示数据并与用户交互。视图根据模型中的数据来渲染界面，并将用户的输入传递给控制器。
+
+3. **Controller（控制器）**：负责协调视图与模型之间的交互。它接收用户输入，将其转换为对模型的操作，然后更新视图。
+
+
+下面是未经过优化的进度条显示：
+
+```cpp
+/*
+    这里只是一个简单的例子实现，展示了如何使用分支来实现不同的进度条显示效果。
+    在new.cpp中，我们将使用观察者模式来完整的实现这个功能。
+*/
+
+#include <iostream>
+#include <chrono>
+#include <thread>
+
+using namespace std;
+
+/* 清屏函数 */
+void clearConsole() {
+    cout << "\033[2J\033[1;1H";
+}
+
+/* 简单文本进度条 */
+void displayProgressBar(int value) {
+    cout << "Progress: " << value << " % " << endl;
+}
+
+/* 图形化进度条 */
+void displayGraphBar(int value) {
+    cout << "[";
+    for (int i = 0; i < 50; i++) {
+        if (i < value / 2) {
+            cout << "=";
+        } else {
+            cout << " ";
+        }
+    }
+    cout << "]" << value << "%" << endl;
+}
+
+/* 数字指示器 */
+void displayNumericIndicator(int value) {
+    cout << "Completed: " << value << " of 100\n";
+}
+
+int main() {
+    int progress = 0;
+
+    // 模拟进度变化
+    for (int i = 0; i <= 100; i += 5) {
+        clearConsole();  // 清屏
+        progress = i;
+
+        // 判断并显示进度条
+        if (progress <= 50) {
+            displayProgressBar(progress);
+        } else if (progress <= 75) {
+            displayGraphBar(progress);
+        } else {
+            displayNumericIndicator(progress);
+        }
+
+        this_thread::sleep_for(chrono::milliseconds(500));
+    }
+
+    return 0;
+}
+```
+
+最后是经过优化的完整进度条代码实现：
+```cpp
+#include <iostream>
+#include <list>
+#include <memory>
+#include <chrono>
+#include <thread>
+
+using namespace std;
+
+/* 清屏函数 */
+void clearConsole() {
+    cout << "\033[2J\033[1;1H";
+}
+
+/* 观察者抽象接口定义 */
+class IObserver {
+public:
+    virtual ~IObserver() {}
+    // 更新方法，由Subject调用，来通知观察者进度变化
+    virtual void update(int value) = 0;
+};
+
+/* 主体接口定义 */
+class ISubject {
+public:
+    virtual ~ISubject() {}
+    // 添加观察者
+    virtual void attach(shared_ptr<IObserver> observer) = 0;
+    // 移除观察者
+    virtual void detach(shared_ptr<IObserver> observer) = 0;
+    // 通知观察者
+    virtual void notify() = 0;
+};
+
+
+/* 进度条主体实现 */
+class ProgressSubject : public ISubject {
+private:
+    list<shared_ptr<IObserver>> observers;      // 观察者列表
+    int progress;                               // 进度
+
+public:
+    ProgressSubject() : progress(0) {}
+
+    // 设置进度
+    void setProgress(int value) {
+        progress = value;
+        notify();
+    }
+
+    // 添加观察者
+    void attach(shared_ptr<IObserver> observer) override {
+        observers.push_back(shared_ptr<IObserver>(observer));
+    }
+    // 移除观察者
+    void detach(shared_ptr<IObserver> observer) override {
+        observers.remove(observer);
+    }
+
+    void notify() override {
+        for(auto& observer : observers) {
+            observer->update(progress);
+        }
+    }
+};
+
+/* 简单文本进度条 */
+class progressBar : public IObserver {
+public:
+    void update(int value) override {
+        cout << "Progress: " << value << " % " << endl;
+    }
+};
+
+/* 图形化进度条 */
+class graphBar : public IObserver {
+public:
+    void update(int value) override {
+        cout << "[";
+        for(int i = 0; i < 50; i++) {
+            if(i < value / 2) {
+                cout << "=";
+            } else {
+                cout << " ";
+            }
+        }
+        cout << "]" << value << "%" << endl;
+    }
+};
+
+/* 数字指示器 */
+class numbericIndicator : public IObserver {
+public:
+    void update(int value) override {
+        cout << "Completed: " << value <<  " of 100\n";
+    }
+};
+
+
+
+int main() {
+    shared_ptr<ProgressSubject> subject = make_shared<ProgressSubject>();
+    shared_ptr<IObserver> pb = make_shared<progressBar>();
+    shared_ptr<IObserver> gb = make_shared<graphBar>();
+    shared_ptr<IObserver> ni = make_shared<numbericIndicator>();
+
+    subject->attach(pb);
+    subject->attach(gb);
+    subject->attach(ni);
+
+    // 模拟进度变化
+    for(int i = 0; i <= 100; i += 5) {
+        clearConsole();     // 清屏
+        subject->setProgress(i);
+        std::this_thread::sleep_for(chrono::milliseconds(500));
+    }
+
+    // 移除一个观察者
+    subject->detach(gb);
+
+    // 再次更新进度
+    for(int i = 0; i <= 100; i += 5) {
+        clearConsole();     // 清屏
+        subject->setProgress(i);
+        std::this_thread::sleep_for(chrono::milliseconds(300));
+    }
+    return 0;
+}
+``
