增加了单一职责模式，现在正在写装饰者模式

--- a/4_decorator/详解.md
+++ b/4_decorator/详解.md
@@ -4,14 +4,14 @@
 这个时候关键就是划清责任。
 
 ## 动机
-针对很多子类，我们希望对所有的子类都进行统一的操作
-![alt text](image.png)
+假设现在有一个流类，同时又有文件流，网络流以及内存流，那么我们想对这些不同的流类进行加密以及缓存操作，如果我们使用继承的方式，那么就是以下这种样子：
+
+![alt text](image-2.png)
 
 
 对于这种拓展操作，会有大量的重复操作，我们可以用组合替代继承
 可以把是原来的子类的方法，替换成父类，然后去new一个子类，这样就从编译时依赖变成了运行时依赖。
-
-![alt text](image-1.png)
+![alt text](image-3.png)
 
 我们把原来继承的继承，改为了装饰和组合实现
 
